# fs-utils

./: cabal.project  flake.nix  fs-utils.cabal  hie.yaml
.github/workflows/: ci.yaml
docs/: FileSystem-IO.html  FileSystem-OsPath.html  FileSystem-OsString.html  FileSystem-Path.html  FileSystem-PathType.html  FileSystem-UTF8.html  README.md  doc-index.html  doc-index.json  fs-utils.haddock  index.html
docs/src/: FileSystem.IO.html  FileSystem.Internal.html  FileSystem.OsPath.html  FileSystem.OsString.html  FileSystem.Path.html  FileSystem.PathType.html  FileSystem.UTF8.html
src/FileSystem/: IO.hs  Internal.hs  OsPath.hs  OsString.hs  Path.hs  PathType.hs  UTF8.hs
test/unit/: Main.hs
test/unit/Unit/FileSystem/: IO.hs  OsPath.hs  OsString.hs  UTF8.hs
tools/: haddock.sh
