cabal-version:   2.4
name:            fs-utils
version:         0.1
license:         MIT
license-file:    LICENSE
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.6
   || ==9.8.3
   || ==9.10.1
   || ==9.12.1

copyright:       2024-2025 Thomas Bidne
author:          Thomas Bidne
maintainer:      tbidne@protonmail.com
homepage:        https://github.com/tbidne/fs-utils/
bug-reports:     https://github.com/tbidne/fs-utils/issues
synopsis:        FileSystem utils
description:     This library contains utilities for the file-system.
category:        FileSystem
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/fs-utils

common common-lang
  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms

  default-language:   GHC2021

  if os(osx)
    cpp-options: -DOSX

  if os(windows)
    cpp-options: -DWINDOWS

library
  import:          common-lang
  exposed-modules:
    FileSystem.IO
    FileSystem.OsPath
    FileSystem.Path
    FileSystem.PathType
    FileSystem.UTF8

  build-depends:
    , base              >=4.16.0.0  && <4.22
    , bytestring        >=0.10.12.0 && <0.13
    , deepseq           >=1.4.4.0   && <1.6
    , exceptions        ^>=0.10.4
    , file-io           ^>=0.1.0.0
    , filepath          >=1.5       && <1.6
    , os-string         ^>=2.0.1
    , path              ^>=0.9.6
    , template-haskell  >=2.18.0.0  && <2.24
    , text              >=1.2.4.0   && <2.2

  hs-source-dirs:  src

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Unit.FileSystem.IO
    Unit.FileSystem.OsPath

  build-depends:
    , base
    , bytestring
    , directory             ^>=1.3.8.0
    , env-guard             ^>=0.2
    , exceptions
    , filepath
    , fs-utils
    , hedgehog              >=1.0.2     && <1.6
    , tasty                 >=1.1.0.3   && <1.6
    , tasty-hedgehog        >=1.2.0.0   && <1.5
    , tasty-hunit           >=0.9       && <0.11
    , unordered-containers  ^>=0.2.14.0

  hs-source-dirs: test/unit
